repair maven-surefire-plugin vm crash