@@ -74,7 +74,7 @@
 <!--                    <parallel>methods</parallel>-->
 <!--                    <threadCount>5</threadCount>-->
                     <argLine>
-                        -Dfile.encoding=UTF-8 -Xmx1024m -Xms1024m -XX:PermSize=1024 -XX:MaxPermSize=1024
+                        -Dfile.encoding=UTF-8 -Xmx1024m
                         -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
                     </argLine>
 
